* cat and print statements replaced with message or warning
* Argument 'quiet' removed in all functions
* Fixed dependency issues
* Automatic CI testing added
* Fixed an issue where runs merged using mergeQ() produced a warning about missing attributes.
* In function clumppExport() and distructExport(), argument 'path' changed to 'exportpath' to be consistent with other functions.
* Fixed minor errors in documentation.

pophelper 2.3.0
=================
* 11-Aug-2019
* Min req R-3.5.0.
* Removed CLUMPP and DISTRUCT executables
* 'useexe' argument in ClumppExport() deprecated.
* Added alignK() function for label switching within and between K
* Argument 'clumppexport' in analyseQ() removed and replaced with 'align'
* New dependency package label.swiching
* Updated function is.qlist()
* Added function as.qlist() to correctly format a qlist object
* Added function joinQ() to combine multiple qlist objects
* Added function sortQ() to sort runs in a qlist by a run attribute
* Added function mergeQ() to merge replicate runs within K
* Added function splitQ() to split a qlist object by an attribute
* 14-Aug-2019
* Added arguments 'legendspacing' and 'legendrow' to plotQ()

pophelper 2.2.9
=================
* 14-Apr-2019
* plotQ(): Order of runs in a joined plot was incorrect when k>10 and grplab in use. Fixed.

pophelper 2.2.8.1
=================
* 16-Mar-2019
* Fixed 'exportpath' issues in plotQ()
* Added 'exportpath' to plotQMultiline() and evannoMethod()
* Added 'exportpath' to tabulateQ()
* Added 'exportpath' to summariseQ()

pophelper 2.2.8
=================
* 15-Mar-2019
* Dropped dependency on package cairo
* summariseQ() accepts single run tabulated input
* evannoMethodStructure(): Argument 'file' incorrectly specified for pdf as 'filename'. Fixed
* plotQMultiline(): Several undocumented arguments added to documentation
* Minor corrections to documentation
* Adjustments to getDim()
* add argument exportpath to all functions
* plotQ(): Added argument 'showgrplab'